--- a/src/styles/layout/container.less
+++ b/src/styles/layout/container.less
@@ -144,26 +144,23 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 0 5px;
+  padding: 0;
+  margin: 0 auto;
   box-sizing: border-box;
+  max-width: 350px;
 }
 
 /* 底部输入区固定在底部 */
 .footer-input-area {
-  position: sticky;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
-  background-color: #fff;
   width: 100%;
+  margin: 0 auto;
+  padding: 8px 15px;
   box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
+  background-color: #ffffff;
   border-top: none;
-  box-shadow: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* 无缝表单 */
